# WindroseRconAPI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  UE4SS-settings.ini  install.ps1  test_dashboard.lua  test_json.lua  test_mod.lua  test_rcon.lua  test_rest_api.lua
Scripts/: auth.lua  commands.lua  discord.lua  game_api.lua  main.lua  rest_api.lua
Scripts/dashboard/: index.html
WindroseRCON/Scripts/: command_registry.lua  commands.lua  config.lua  config_user.lua  game_api.lua  http_server.lua  json.lua  main.lua  rcon_server.lua  rest_api.lua  utils.lua
WindroseRCON/Scripts/dashboard/: app.js  style.css
WindroseRCON_DLL/: BUILD.md  CMakeLists.txt  build.bat
WindroseRCON_DLL/src/: windrose_rcon.cpp
docs/: commands.md
